# optymalizacja

zad1/: CMakeLists.txt  main.cpp  polecenie.md
zad2/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
zad3/: main.cpp
